<resources>
    <string name="app_name">BurppleFoodPlaces</string>
    <string name="action_settings">Settings</string>

    <string name="menu_promotion">Promotion</string>
    <string name="menu_guides">Guides</string>
    <string name="menu_chinese">Chinese Food</string>
    <string name="menu_thai">Thai Food</string>
    <string name="menu_europe">European Style</string>

    <string name="before_login_btnlogin_text">LOGIN ၀င်ရန်</string>
    <string name="before_login_btnregister_text">REGISTER ပြုလုပ်ရန်</string>

    <!-- for fragment login-->
    <string name="login_fragment_title">Login Form</string>
    <string name="login_mobile_or_mail">Mobile or Email</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="login_create_new">Create a New Account</string>
    <string name="login_or">(or)</string>
    
    <!-- for fragment register-->
    <string name="register_fragment_title">Sign up form</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_email">Mail@example.com</string>
    <string name="lbl_phone_no">Please enter a phone number</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_terms_and_conditions">I agree to Terms and Privacy Policy</string>
    <string name="btn_sign_up">Sign Up</string>

</resources>
