<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item"
        android:title="@string/menu_promotion"
        android:icon="@drawable/ic_keyboard_arrow_down_24dp"
        />

    <item
        android:id="@+id/menu_guides"
        android:title="@string/menu_guides"
        android:icon="@drawable/ic_accessibility_24dp"
        />

    <item
        android:id="@+id/menu_chinese"
        android:title="@string/menu_chinese"
        android:icon="@drawable/ic_restaurant_24dp"
        />

    <item
        android:id="@+id/menu_thai"
        android:title="@string/menu_thai"
        android:icon="@drawable/ic_restaurant_menu_24dp"
        />

    <item
        android:id="@+id/menu_europe"
        android:title="@string/menu_europe"
        android:icon="@drawable/ic_adb_24dp"
        />

</menu>