<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_fragment_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular_3x"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_first_name"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_last_name"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_phone_no"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_confirm_passowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        >

        <EditText
            android:id="@+id/et_conifrm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_confirm_password"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_regular"
            />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_terms_and_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_terms_and_conditions"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:textColor="@color/white"
        android:checked="true"
        android:textSize="@dimen/text_regular"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        style="@style/text_input_layout"
        android:background="@color/colorAccent"
        android:padding="@dimen/margin_medium_2"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</LinearLayout>