<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_fragment_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular_3x"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="@dimen/user_profile_size"
        android:layout_height="@dimen/user_profile_size"
        android:src="@drawable/dummy_user_picture"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mobile_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_3"
        android:layout_below="@id/iv_user_profile"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/et_mobile_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_mobile_or_mail"
            android:textColorHint="@color/white"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_mobile_or_email"
        android:layout_marginRight="@dimen/margin_medium_3"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:drawableRight="@drawable/ic_visibility_black_24dp"
            />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_me"
        android:layout_below="@id/input_password"
        android:layout_alignLeft="@id/input_password"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/grey"
        android:checked="true"
        />
    
    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot"
        android:layout_alignRight="@id/input_password"
        android:layout_below="@id/input_password"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_below="@id/btn_forgot_password"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_alignLeft="@id/input_password"
        android:layout_alignRight="@id/input_password"
        android:padding="@dimen/margin_medium_2"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular_3x"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_create_new"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular"
        />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:layout_below="@id/btn_new_account"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular"
        />

    <ImageView
        android:id="@+id/iv_fb_login"
        android:layout_width="@dimen/icon_login_size"
        android:layout_height="@dimen/icon_login_size"
        android:src="@drawable/if_facebook_circle_294710"
        android:layout_below="@id/tv_or"
        android:layout_toLeftOf="@id/iv_twitter_login"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        />

    <ImageView
        android:id="@+id/iv_twitter_login"
        android:layout_width="@dimen/icon_login_size"
        android:layout_height="@dimen/icon_login_size"
        android:src="@drawable/if_twitter_circle_294709"
        android:layout_alignBottom="@id/iv_fb_login"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/iv_google_login"
        android:layout_width="@dimen/icon_login_size"
        android:layout_height="@dimen/icon_login_size"
        android:src="@drawable/if_google_circle_294707"
        android:layout_alignBottom="@id/iv_fb_login"
        android:layout_toRightOf="@id/iv_twitter_login"
        android:layout_marginLeft="@dimen/margin_medium_2"
        />


</RelativeLayout>